# SmartLove

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  KNOWN_ISSUES.md  MIGRATION_NOTES.md  README.md  SUMMARY.md  build.sh  esp32-smartfit.cfg  flash_device.bat  partitions.ci  partitions.csv  partitions_release.csv  projectConfig.csv  sdkconfig.ci  sdkconfig.defaults  sdkconfig_debug.defaults  sdkconfig_release.defaults  target.cmake
components/: README.md
components/button_handler/: CMakeLists.txt  button_handler.c
components/button_handler/include/: button_handler.h
components/esp32-edc-azure/: .gitlab-ci.yml
components/esp32-edc-azure/azure-iot-middleware-freertos/: CMakeLists.txt
components/esp32-edc-azure/azure-sdk-for-c/: CMakeLists.txt
components/esp32-edc-azure/azure_backoff/: CMakeLists.txt  backoff_algorithm.cpp
components/esp32-edc-azure/azure_crypto/: CMakeLists.txt  azure_esp32_crypto.cpp
components/esp32-edc-azure/azure_transport/: CMakeLists.txt  transport_tls_socket.cpp  transport_tls_socket.hpp
components/esp32-edc-azure/coreMQTT/: CMakeLists.txt
components/esp32-edc-toolkit/: .gitlab-ci.yml  README.MD
components/esp32-edc-toolkit/freertoscpp/: CMakeLists.txt  FreeRTOS.cpp  FreeRTOS.hpp  FreeRTOSTimer.cpp  README.MD  Task.cpp  Task.hpp
components/esp32-edc-toolkit/modules/: BQ32000.cpp  BQ32000.hpp  CMakeLists.txt  MCP47FXBXX.cpp  MCP47FXBXX.hpp  MCP4802.cpp  MCP4802.hpp  SEN5x.cpp  SEN5x.hpp  SHT25.cpp  SHT25.hpp  SIM900.cpp  SIM900.hpp  SM9333.cpp  SM9333.hpp  TCA6408A.cpp  TCA6408A.hpp  WS2812.cpp  WS2812.hpp
components/esp32-edc-toolkit/networking/: CMakeLists.txt  DNS.cpp  DNS.hpp  Ethernet.cpp  Ethernet.hpp  NetworkEventHandler.cpp  NetworkEventHandler.hpp  README.MD  SSLUtils.cpp  SSLUtils.hpp  SockServ.cpp  SockServ.hpp  Socket.cpp  Socket.hpp  WiFi.cpp  WiFi.hpp  WiFiAPRecord.hpp
components/esp32-edc-toolkit/peripherals/: ADC.cpp  ADC.hpp  CMakeLists.txt  DeepSleep.cpp  DeepSleep.hpp  GPIO.cpp  GPIO.hpp  I2C.cpp  I2C.hpp  I2CArbiter.cpp  I2CArbiter.hpp  NVS.cpp  NVS.hpp  PWM.cpp  PWM.hpp  README.MD  SDCard.cpp  SDCard.hpp  SPIFFS.cpp  SPIFFS.hpp  System.cpp  System.hpp  UART.cpp  UART.hpp
components/esp32-edc-toolkit/protocols/cloud/: Azure.cpp  Azure.hpp  CMakeLists.txt  MQTT.cpp  MQTT.hpp  README.MD
components/esp32-edc-toolkit/protocols/http/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  HttpServer.cpp  HttpServer.hpp  README.MD
components/esp32-edc-toolkit/utility/: AES.cpp  AES.hpp  CMakeLists.txt  CallbackWrapper.hpp  FATFS_VFS.cpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  GeneralUtils.cpp  GeneralUtils.hpp  HMAC.cpp  HMAC.hpp  JSON_RPC.cpp  JSON_RPC.hpp  Memory.cpp  Print.cpp  Printable.h  README.MD  SHA1.cpp  SHA1.hpp  SHA256.cpp  SHA256.hpp  SysTick.cpp  SysTick.hpp  Timer.hpp  TimerInterface.h  WString.cpp  WString.h  itoa.c  itoa.h
components/led_controller/: CMakeLists.txt  led_controller.c  ws2812_rmt.c
components/led_controller/include/: led_controller.h  ws2812_rmt.h
components/mqtt_client/: CMakeLists.txt  mqtt_client.c  smartlove_mqtt.c
components/mqtt_client/include/: mqtt_config.h  smartlove_mqtt.h
components/smartlove_config/include/: smartlove_config.h
components/smartlove_utils/: CMakeLists.txt  smartlove_utils.c
components/smartlove_utils/include/: smartlove_utils.h
components/wifi_manager/: CMakeLists.txt  README.md  captive_portal.c  dns_server.c  wifi_manager.c
components/wifi_manager/include/: captive_portal.h  dns_server.h  wifi_manager.h
esp32-scripts/: .gitignore  README.md  esp32-main-builder.py
esp32-scripts/include/: buildUpdate_lib.py  definitions_hpp_lib.py  flash_lib.py  mkspiffs_lib.py  partitiontable_lib.py  pythonpath.py  sdkconfig_lib.py
main/: Authenticator.cpp  Authenticator.hpp  AzureController.cpp  AzureController.hpp  CMakeLists.txt  CallbackWrapper.hpp  CloudController.cpp  CloudController.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Definitions.hpp  EventLog.cpp  EventLog.hpp  ExtensionController.cpp  ExtensionController.hpp  HMIController.cpp  HMIController.hpp  JsonRpcCallHandler.cpp  JsonRpcCallHandler.hpp  ModbusTcpController.cpp  ModbusTcpController.hpp  MqttController.cpp  MqttController.hpp  MyNetworkEventHandler.cpp  MyNetworkEventHandler.hpp  NetworkController.cpp  NetworkController.hpp  OtaController.cpp  OtaController.hpp  RtcController.cpp  RtcController.hpp  WebserverController.cpp  WebserverController.hpp  demo_config.h  main.c  main.cpp
webfrontend/: index.html
webfrontend/_internal/: readme.md
webfrontend/_internal/upload/: mqtt_ca.crt
webfrontend/assets/: events.json  icons-source  timezones.json
webfrontend/css/: led.css  style.css
webfrontend/html/: about.html  azure.html  cloud.html  dash.html  events.html  graphs.html  home.html  modbustcp_server.html  mqtt.html  network.html  settings.html  system.html  user.html
webfrontend/js/: about.js  azure.js  cloud.js  dash.js  events.js  graphs.js  home.js  modbustcp_server.js  mqtt.js  network.js  settings.js  system.js  user.js
(+26 files in other folders)
