idf_component_register(SRCS "TCA6408A.cpp"
                            "SM9333.cpp"
                            "MCP47FXBXX.cpp"
                            "SEN5x.cpp"
                            "BQ32000.cpp"
                            "SIM900.cpp"
                            "SHT25.cpp"
                            "MCP4802.cpp"
                            "WS2812.cpp"
                           
                       INCLUDE_DIRS "."
                       REQUIRES peripherals)